--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev189-1.23.0'
+    compile 'com.google.code.gson:gson:2.8.2'
 }
