--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceSets {
     main {
         resources {
             srcDirs = ["src/main/java", "src/main/resources"]
-            includes = ["**/*.fxml"]
+            includes = ["**/*.fxml", "**/*.png"]
         }
     }
 }
@@ -26,5 +26,4 @@ dependencies {
     compile 'com.google.api-client:google-api-client:1.23.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev189-1.23.0'
-    compile 'com.google.code.gson:gson:2.8.2'
 }
