Implemented a Translations class that uses ResourceBundles for translations but comes with the features of using the user's language when possible and a default backup translation (English) for missing translations in the user's language. It also has a automatic translation feature that attempts to translate all JavaFx Nodes that have the same id as a translation key. - Created English translation for MainWindow - Started on Swedish translation for MainWindow - Updated MainWindow to use translations - small changes

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceSets {
     main {
         resources {
             srcDirs = ["src/main/java", "src/main/resources"]
-            includes = ["**/*.fxml", "**/*.png", "**/*.json"]
+            includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties"]
         }
     }
 }
