- Translations for LocalizeCategories, ManagePlaylists and presetWindow - Changed Translations.autoTranslate and added documentation for Translations class. - What is the CodeStyleConfig?

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -1,19 +1,23 @@
 # Translations for common strings. Full revision made for release 1.1.1
+# Translation by: Stekeblad
 # Confirmations
-yes=Yes
-no=No
-cancel=Cancel
-error=Error
+yes = Yes
+no = No
+cancel = Cancel
+error = Error
 # Save/edit etc.
-save=Save
-edit=Edit
-delete=Delete
-startUpload=Start Upload
-abort=Abort
-aborted=Aborted
-hide=Hide
+save = Save
+edit = Edit
+delete = Delete
+startUpload = Start Upload
+abort = Abort
+aborted = Aborted
+hide = Hide
 # App Name
-appName=Stekeblads Video Uploader
-settingsWindowTitle=Settings - Stekeblads Video Uploader
+app_name = Stekeblads Video Uploader
+app_settingsWindowTitle = Settings - Stekeblads Video Uploader
 # Uploading
-waiting=Waiting...
+waiting = Waiting...
+app_locCatWindowTitle = Get Categories
+app_manPlayWindowTitle = Manage Playlists
+sorry = Sorry
