- Changed the constant message strings in Auth to translations in baseStrings - Added translations for Uploader class - Added null checks for category when saving presets and uploads - Creating a new preset and then cancel editing will remove it visually, before it was there but was not saved to disc. - Translations class now looks for similar translations if one is not found in the user's locale. "Similar" means the first half of the user's locale match another locale's first half. - Fixed uploading bug that caused the program to always believe it is still upload something if a upload was aborted.

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -1,11 +1,7 @@
-# Translations for common strings. Full revision made for release 1.1.1
-# Translation by: Stekeblad
-# Confirmations
 yes = Yes
 no = No
 cancel = Cancel
 error = Error
-# Save/edit etc.
 save = Save
 edit = Edit
 delete = Delete
@@ -13,11 +9,22 @@ startUpload = Start Upload
 abort = Abort
 aborted = Aborted
 hide = Hide
-# App Name
 app_name = Stekeblads Video Uploader
 app_settingsWindowTitle = Settings - Stekeblads Video Uploader
-# Uploading
 waiting = Waiting...
 app_locCatWindowTitle = Get Categories
 app_manPlayWindowTitle = Manage Playlists
 sorry = Sorry
+auth_short = Authentication Required
+auth_full = To do this you must grant the application permission to \
+access your Youtube channel. Do you want to allow "Stekeblads \
+Youtube Uploader" to access Your channel? \n\nThe \
+permissions is required for the program to upload videos to \
+your channel, setting thumbnails, getting a list of video \
+categories, adding videos to playlists and creating new \
+playlists. \n\nPress yes to open your browser for \
+authentication or no to cancel. Authentication does not work \
+in Microsoft Edge, if it is your default browser you need to \
+temporary change to another one.
+diag_invalidCategory_short = Invalid Category
+diag_invalidCategory_full = You need to select a category
