- Translated uploads and presets - If a upload is created without a preset the cancel button is now replaced by a delete button. - Renamed getUploadPane in VideoUpload and getPresetPane in VideoPreset to just getPane so it overrides the getPane from VideoInformationBase - Translations now have a second version of autoTranslate that takes a string if all Ids start with a prefix that is not part of the translation key, used to be able to translate presets and uploads. - Finished swedish - sweden translation

--- a/src/main/resources/strings/locCatWindow/locCatWindow.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow.properties
@@ -21,7 +21,7 @@ browser, but this is the url:\n%s
 diag_catReqFailed = Request to get categories failed
 diag_invalidCodeResp = The selected language or country code is not valid or not \
 supported by Youtube, did not receive any categories
-diag_invalidCodes_full = A valid code is to characters long, both a country and a \
+diag_invalidCodes_full = A valid code is two characters long, both a country and a \
 language code is required
 diag_invalidCodes_short = Invalid code
 downloading = Downloading...
