- Replaced uses of initialize with myInit add added a call to it at the end of the window creation (I want access to scene in the init method and it is not accessible in initilize) - Made it possible to quickly get to a relevant wiki page by pressing F1, does not currently always work. - Made the method in OpenInBrowser static and added a alternative version that just takes a String and silently errors if something went wrong - The word settings should not be used then referring to presets (may soon add a actual settings window)

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -10,7 +10,7 @@ abort = Abort
 aborted = Aborted
 hide = Hide
 app_name = Stekeblads Video Uploader
-app_settingsWindowTitle = Settings - Stekeblads Video Uploader
+app_presetWindowTitle = Presets - Stekeblads Video Uploader
 waiting = Waiting...
 app_locCatWindowTitle = Get Categories
 app_manPlayWindowTitle = Manage Playlists
