--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceSets {
     main {
         resources {
             srcDirs = ["src/main/java", "src/main/resources"]
-            includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties"]
+            includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties", "**/*.css"]
         }
     }
 }
