- Uploads that fail now have a red progressBar and a "reset" button instead of "abort" - Added a (probably temporary) condition in Uploader that directly throws an RuntimeException if the video title is "forceUploadFailure" - Added setProgressBarColor to VideoUpload - Switched place of the buttons and the progressBar in VideoUpload panes -

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -28,3 +28,4 @@ in Microsoft Edge, if it is your default browser you need to \
 temporary change to another one.
 diag_invalidCategory_short = Invalid Category
 diag_invalidCategory_full = You need to select a category
+reset = Reset
