--- a/src/main/resources/strings/uploader/uploader.properties
+++ b/src/main/resources/strings/uploader/uploader.properties
@@ -1,4 +1,5 @@
 doneWithLink = Done! Video is here: %s
+failed = Upload failed
 finished = Upload Complete
 notStarted = Upload Not Started
 playlist = Adding to playlist "%s"
