- Renamed PickFile to FileUtils - Added method getContentOfResourceDir to FileUtils, because listing things in a resource directory is difficult and how to it is different when running the program as a jar compared to in the development environment.

--- a/src/main/resources/strings/mainWindow/mainWindow.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow.properties
@@ -24,7 +24,8 @@ diag_abortAll_full = Are you sure you want to abort the uploading of all started
 diag_abortAllClear_short = Abort and Clear ALL Uploads?
 diag_abortAllClear_full = Are you sure you want to abort all started uploads and remove all started, aborted, finished and not yet started uploads?
 diag_noPlaylists_short = No Playlists
-diag_noPlaylists_full = No playlists synced yet, go to the Presets window and Manage Playlists to sync with Youtube
+diag_noPlaylists_full = No playlists synced yet, go to the Presets window and Manage \
+Playlists to sync with Youtube
 diag_noVidTitle_short = Title Required
 diag_noVidTitle_full = Video does not have a title
 diag_backupNoRestore_short = Can Not Change Back
