- Added button to open settings window in main window -  Created class TranslationsMeta that loads all translation files in stings/meta/ to make all of them easy accessible in settings window - improved error message that appear when a preset failed to load - the settings window can now list all translations (that have a meta file) and display the meta details about them, can not change language yet

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -29,3 +29,5 @@ temporary change to another one.
 diag_invalidCategory_short = Invalid Category
 diag_invalidCategory_full = You need to select a category
 reset = Reset
+app_settingsWindowTitle = Settings - Stekeblads Video Uploader
+errOpenWindow = Could not open window
