--- a/src/main/resources/strings/mainWindow/mainWindow.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow.properties
@@ -37,3 +37,4 @@ diag_noStartUpload_full_noTitle = Cant start the upload, the video does not have
 diag_noStartUpload_full_noCategory = Cant start the upload, category is not selected or invalid
 diag_abortSingle_short = Abort upload?
 diag_abortSingle_full = Are you sure you want to abort the uploading of %s?
+btn_settings = Settings
