--- a/src/main/resources/strings/meta/meta.properties
+++ b/src/main/resources/strings/meta/meta.properties
@@ -11,3 +11,4 @@ lastAppVersionReview = 1.1.1
 # The date (in the format YYYY-MM-DD) when the translation for this language was
 # updated, both smaller and larger updates.
 lastUpdate = 2018-03-28
+locale = default
