- Added support for changing language, before it was selected automatically (language will be automatically selected on first run but now you can change)

--- a/src/main/resources/strings/meta/meta.properties
+++ b/src/main/resources/strings/meta/meta.properties
@@ -1,5 +1,5 @@
 # the locale code may be confusing to some users, expand the locale name to [Language] - [Country]
-translationName = default (English)
+translationName = default (english)
 # Authors, a list of peoples who have made a big contribution to the translation
 # to this language, you should not add your name if you only fixed one or two typos
 authors = Stekeblad
