- Created a system for creating and changing sets of buttons (states), states is used in preset window and main window. - Added a Clone button to presets

--- a/src/main/resources/strings/presetWindow/presetWindow.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow.properties
@@ -29,5 +29,6 @@ label_savedPresets = Saved Presets
 txt_nameNewPreset_pt = Enter a name
 diag_presetDelete_short = Confirm delete
 diag_presetDelete_full = Are you sure you want to delete preset "%s"?
+copyOf = Copy of-
 
 
