--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -31,3 +31,4 @@ diag_invalidCategory_full = You need to select a category
 reset = Reset
 app_settingsWindowTitle = Settings - Stekeblads Video Uploader
 errOpenWindow = Could not open window
+clone = Clone
