- Preset and playlist choiceBox now have a default option for no preset or playlist should be used (text translatable) - Thumbnail can now be reset to default in the new right click menu for thumbnails - You can now go to the YouTube overview page for your playlist by right clicking on them and selecting view on YouTube - More/Better checks for video/thumbnail file does no longer exist

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -32,3 +32,5 @@ reset = Reset
 app_settingsWindowTitle = Settings - Stekeblads Video Uploader
 errOpenWindow = Could not open window
 clone = Clone
+noSelected = --NO SELECTED--
+resetToDefault = Reset to default
