--- a/src/main/resources/strings/manPlayWindow/manPlayWindow.properties
+++ b/src/main/resources/strings/manPlayWindow/manPlayWindow.properties
@@ -10,3 +10,4 @@ label_description = Select the playlists to be visible in the playlist dropdowns
 unchecked will be hidden
 txt_newPlaylistName_pt = new playlist name
 diag_creatingFailed = Failed to create new playlist
+viewOnYouTube = View on YouTube
