- It should not be possible anymore to select null as playlist or category previously this happened if you opened the drop down and then clicked outside the list. While fixing I ended up moving some of the category and playlist logic from the WindowControllers to VideoInformationBase - I think I made Uploader threadsafe (safer?)

--- a/src/main/resources/strings/settingsWindow/settingsWindow.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow.properties
@@ -1,4 +1,6 @@
 btn_clearStoredData = CLEAR STORED DATA
+btn_clearStoredData_tt = Click to show a confirmation dialog explaining what will be \
+deleted with an option to cancel
 btn_gotoDownload = Program download page
 btn_gotoMainPage = Home page
 btn_gotoWiki = Wiki
@@ -6,7 +8,8 @@ btn_gotoWiki_tt = You can also go directly to the wiki page for a window by \
 pressing F1 when it is in focus (try now) 
 btn_translationDetails = About this translation
 diag_clearStoredData_full = This will delete all presets, the saved YouTube login \
-(not account), the local playlist filtering and all other settings! \
+(not the account), the local playlist filtering and all other settings! \
+\nAll your videos, playlists etc. on YouTube will NOT be affacted.\
 \n\nAre you realy, realy sure you want to do this?
 diag_clearStoredData_short = Clear data - WARNING!
 diag_delAfterExit_full = All settings will be deleted after the program has been closed
