--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -34,3 +34,7 @@ errOpenWindow = Could not open window
 clone = Clone
 noSelected = --NO SELECTED--
 resetToDefault = Reset to default
+diag_categoryRemoved_short = Category does no longer exist
+diag_categoryRemoved_full = The selected category does no longer exist. If you changed \
+category localization you need to press cancel  and go into \
+edit again for the list to update.
