--- a/src/main/resources/strings/locCatWindow/locCatWindow.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow.properties
@@ -2,12 +2,14 @@ btn_cancel = Cancel
 btn_codeListCountry = Code List
 btn_codeListLang = Code List
 btn_getCategories = Get Categories
-description = Did you know that Youtube have different categories in \
+description = Before you change localization: Save all presets and videos \
+you are editing, the current categories will be invalidated \
+and you will not be able to save the changes you made!\n\n\
+Did you know that Youtube have different categories in \
 different countries and that the internal categoryId for \
 one category can be different in different countries? For \
-your video to appear in the correct category we need to know \
-what country you live in. (We will keep it a secret between \
-you and Youtube.) The language field allows you to get the \
+your video to appear in the correct category the program need to know \
+what country you live in. The language field allows you to get the \
 category names in any language Youtube support. The fields \
 should contain the official two-character code for the \
 country/language. The code list buttons opens a list of \
