- fixed bug with deleting uploads - changed so presets that has never been saved (clones and newly created) have a delete button instead of cancel - fixes in resetting failed uploads - uploader should now displays progress in whole percent, the decimal was never used so it looked ugly - If an error occurs when loading saved presets, the error message should now be possible to close without closing the preset window. Said error message will also include the data in the failing presets save file

--- a/src/main/resources/strings/presetWindow/presetWindow.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow.properties
@@ -1,6 +1,7 @@
 btn_addNewPreset = Add New Preset
 btn_localizeCategories = Localize Categories
-btn_localizeCategories_tt = Get the categories that are allowed to be used in your country translated to a language you understand
+btn_localizeCategories_tt = Get the categories that are allowed to be used in your country translated to a language you understand.\n\
+You can not change this if one or more presets/uploads is in edit mode or an upload is in progress.
 btn_managePlaylists = Manage Playlists
 btn_managePlaylists_tt = Get your playlists from YouTube into the program and filter witch to appear in the playlist dropdowns
 btn_tips = Tips
