--- a/src/main/resources/strings/presetsUploads/presetsUploads.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads.properties
@@ -12,3 +12,4 @@ _visibility_tt = How will the video be accessible?\n\
 public - everyone can see it\n\
 private - only you can watch it\n\
 unlisted - the video url is required to find the video
+failed = Upload Failed
