--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ version '0.0.0.1'
 apply plugin: 'java'
 apply plugin: 'application'
 
+mainClassName = "io.github.stekeblad.videouploader.main.Main"
+
 sourceCompatibility = 1.11
 
 sourceSets {
@@ -31,11 +33,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compile 'com.google.api-client:google-api-client:1.23.0'
-    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev189-1.23.0'
+    compile 'com.google.api-client:google-api-client:1.25.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.25.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev205-1.25.0'
 
     compile "org.openjfx:javafx-base:11:${platform}"
     compile "org.openjfx:javafx-graphics:11:${platform}"
