Moved features from Java 11 branch to master but made sure its Java 8 compatible. Also did things (some probably bad) to make the project work again after a year of inactivity

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ sourceCompatibility = 1.8
 sourceSets {
     main {
         resources {
-            srcDirs = ["src/main/java", "src/main/resources"]
+            srcDirs = ["src/main/java", "src/main/resources", "src/main/java/META-INF/**/*.*"]
             includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties", "**/*.css"]
         }
     }
