- Created PresetApplicator for offloading the process of applying presets on videos to a background thread. Reason: During testing the process of finding meta data in files could take towards a minute.

--- a/src/main/resources/strings/mainWindow/mainWindow.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow.properties
@@ -12,6 +12,7 @@ btn_abortAndClear_tt = Aborts all started uploads and removes all uploads from t
 txt_autoNum_tt = Requires the $(ep) tag in preset video title
 label_selectPreset = Select a Preset
 label_numbering = Automatic Numbering
+label_presetProgress = Tillämpar förinställning... (%d kvar)
 diag_closeWarn_short = Close Program?
 diag_closeWarn_full = Do you want to close, now? There is currently one or more uploads in progress and they will be stopped if you close the program. What do you want to do?
 diag_closeWarn_op1 = Do not close
