- Added meta data tool window - Removed the small horizontal scroll bar in mainWindow and PresetWindow - Updated YouTube API version

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -12,8 +12,8 @@ hide = Hide
 app_name = Stekeblads Video Uploader
 app_presetWindowTitle = Presets - Stekeblads Video Uploader
 waiting = Waiting...
-app_locCatWindowTitle = Get Categories
-app_manPlayWindowTitle = Manage Playlists
+app_locCatWindowTitle = Get Categories - Stekeblads Video Uploader
+app_manPlayWindowTitle = Manage Playlists - Stekeblads Video Uploader
 sorry = Sorry
 auth_short = Authentication Required
 auth_full = To do this you must grant the application permission to \
@@ -38,3 +38,4 @@ diag_categoryRemoved_short = Category does no longer exist
 diag_categoryRemoved_full = The selected category does no longer exist. If you changed \
 category localization you need to press cancel  and go into \
 edit again for the list to update.
+app_metaToolWindowTitle = Meta Data Tool - Stekeblads Video Uploader
