--- a/src/main/resources/strings/presetWindow/presetWindow.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow.properties
@@ -16,16 +16,14 @@ that name!
 diag_presetExist_short = Preset already exists
 diag_tips = First warnings: \n- Do not start a line in the description \
 box with a underscore ("_") as that preset will not be \
-loadable again!\n- Tags must be separated with a comma \
+loadable again!\n- Video tags must be separated with a comma \
 followed by a space, forgetting the space will make the \
 comma a part of the tag.\nOk, tips!\
-\n- In the video title field you can write "$(ep)" to tell \
-the program where to insert the episode number defined \
-when adding videos for upload.\n- In the video title field \
-you can also write "$(rawname)" to insert the name of the \
-video file used\n- In the description field you can add \
-"$(playlist)" to insert a link to the playlist the video \
-will be added to when it is uploaded.
+\nThere are several powerful "tags" you can use in presets, \
+for  example $(ep) can auomatically nuber your videos and \
+$(playlist) can insert a link to the playlist videos will be \
+added to. You can find all available tags on the wiki. The \
+fastest way there is by closing this window and pressing the F1 key
 label_savedPresets = Saved Presets
 txt_nameNewPreset_pt = Enter a name
 diag_presetDelete_short = Confirm delete
