--- a/src/main/resources/strings/settingsWindow/settingsWindow.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow.properties
@@ -6,6 +6,8 @@ btn_gotoMainPage = Home page
 btn_gotoWiki = Wiki
 btn_gotoWiki_tt = You can also go directly to the wiki page for a window by \
 pressing F1 when it is in focus (try now) 
+btn_metaDataTool = Meta data tool
+btn_metaDataTool_tt = Pick a file and get a list of all meta data found inside
 btn_translationDetails = About this translation
 diag_clearStoredData_full = This will delete all presets, the saved YouTube login \
 (not the account), the local playlist filtering and all other settings! \
@@ -17,3 +19,4 @@ diag_delAfterExit_short = Deletion scheduled
 label_langSelect = Langugage settings
 label_links = Links
 label_resetSettings = Reset application settings
+label_tools = Tools
