Moved translation for "downloading" from localize family to base family Added back a check for if file exists in refreshPlaylists Hit the ant with my largest hammer (repaired my ant build script that broke when I updated th eYouTube API version, not versioned but I mention it anyway)

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -39,3 +39,4 @@ diag_categoryRemoved_full = The selected category does no longer exist. If you c
 category localization you need to press cancel  and go into \
 edit again for the list to update.
 app_metaToolWindowTitle = Meta Data Tool - Stekeblads Video Uploader
+downloading = Downloading...
