--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 group 'io.github.stekeblad'
 version '0.0.0.1'
 
+apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -21,8 +22,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
     compile 'com.google.api-client:google-api-client:1.30.5'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.4'
     compile 'com.google.apis:google-api-services-youtube:v3-rev20190827-1.30.1'
