--- a/src/main/resources/strings/mainWindow/mainWindow.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow.properties
@@ -14,7 +14,9 @@ label_selectPreset = Select a Preset
 label_numbering = Automatic Numbering
 label_presetProgress = Applying preset... (%d left)
 diag_closeWarn_short = Close Program?
-diag_closeWarn_full = Do you want to close, now? There is currently one or more uploads in progress and they will be stopped if you close the program. What do you want to do?
+diag_closeWarn_full = Do you want to close, now? There is currently one or more \
+uploads in progress and they will be stopped if you close \
+the program. What do you want to do?
 diag_closeWarn_op1 = Do not close
 diag_closeWarn_op2 = Stop all uploads
 diag_closeWarn_op3 = Auto-restart started but unfinished uploads next time
@@ -39,3 +41,4 @@ diag_noStartUpload_full_noCategory = Cant start the upload, category is not sele
 diag_abortSingle_short = Abort upload?
 diag_abortSingle_full = Are you sure you want to abort the uploading of %s?
 btn_settings = Settings
+diag_loadWaitingUploads = Failed loading uploads from last time
