--- a/src/main/resources/strings/presetsUploads/presetsUploads.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads.properties
@@ -1,5 +1,7 @@
 _category_tt = Youtube Video Category
 _description_pt = Video description
+_madeForKids = Flag video as "Made for kids"
+_madeForKids_tt = Right click to open about Made for kids in your web browser
 _playlist_tt = Select a playlist to add this video to
 _presetName_pt = Preset name
 _status = Upload Not Started
