Issue #12: Created update checker -- Added Google Tink for verifying the digtal signature of the downloaded update -- Added okhhtp3 For easier HTTP-requests

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -40,3 +40,9 @@ category localization you need to press cancel  and go into \
 edit again for the list to update.
 app_metaToolWindowTitle = Meta Data Tool - Stekeblads Video Uploader
 downloading = Downloading...
+close = Close
+update_available_short = Update Available
+update_available_full = Update available, do you want to download this update? \
+Release notes for all versions and manual downloads can be found \
+on GitHub, links in the settings window.\
+\n\nNew version: 
