--- a/src/main/resources/strings/settingsWindow/settingsWindow.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow.properties
@@ -9,6 +9,12 @@ pressing F1 when it is in focus (try now)
 btn_metaDataTool = Meta data tool
 btn_metaDataTool_tt = Pick a file and get a list of all meta data found inside
 btn_translationDetails = About this translation
+btn_updateNow = Check for updates now
+check_checkForUpdates = Automatically check for updates
+check_silentUpdates = Update silently
+check_silentUpdates_tt = If checked, new updates will be downloaded without showing \
+any pop-ups or windows. Next time you open the program \
+you will magically have the newest version
 diag_clearStoredData_full = This will delete all presets, the saved YouTube login \
 (not the account), the local playlist filtering and all other settings! \
 \nAll your videos, playlists etc. on YouTube will NOT be affacted.\
@@ -20,3 +26,4 @@ label_langSelect = Langugage settings
 label_links = Links
 label_resetSettings = Reset application settings
 label_tools = Tools
+label_updater = Updater Settings
