--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,30 @@ sourceSets {
     main {
         resources {
             srcDirs = ["src/main/java", "src/main/resources"]
-            includes = ["**/*.fxml", "**/*.png", "**/*.json", "**/*.properties", "**/*.css", "src/main/java/META-INF/*"]
+            includes = ["**/*.fxml",
+                        "**/*.png",
+                        "**/*.json",
+                        "**/*.properties",
+                        "**/*.css",
+                        "src/main/java/META-INF/*",
+                        "**/*.pub"
+            ]
         }
     }
 }
 
-task makeMyJar(type: Jar) {
+task generateVersionNumberFile(dependsOn: compileJava) {
+    inputs.property "version", project.version
+    outputs.dir "$buildDir/resources/main/generated"
+    doFirst {
+        def versionFile = file("$buildDir/resources/main/generated/CurrentVersion.properties")
+        versionFile.parentFile.mkdirs()
+        versionFile.text = "$project.version"
+    }
+}
+
+// Outputs to: build/libs/[baseName]-[version].jar
+task makeMyJar(type: Jar, dependsOn: generateVersionNumberFile){
     baseName = 'Stekeblads_Video_Uploader'
     from {
         configurations.compile.collect {
@@ -36,10 +54,16 @@ repositories {
 }
 
 dependencies {
+    // The YouTube API and its requirements
     compile 'com.google.api-client:google-api-client:1.30.5'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.4'
     compile 'com.google.apis:google-api-services-youtube:v3-rev20200213-1.30.9'
+    // For the metadata-related features
     compile 'org.jcodec:jcodec:0.2.5'
+    // Verifying downloaded updates are real and not from someone else
+    compile 'com.google.crypto.tink:tink:1.3.0'
+    // A better HTTP-client than the one built into Java
+    compile 'com.squareup.okhttp3:okhttp:4.5.0'
 }
 
 // https://developers.google.com/api-client-library/java/apis/youtube/v3
