- The name of the channel selected when authenticating with YouTube is now shown in the main window title (if the authentication is valid on startup) - Changed how detecting if the user has authenticated with YouTube is handled - Extended the default tooltip duration to 10 seconds - Added [logout from/revoke access to] YouTube channel feature (but don't test it now, you may not be able to log in again before the program verification is done!)

--- a/src/main/resources/strings/settingsWindow/settingsWindow.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow.properties
@@ -8,6 +8,10 @@ btn_gotoWiki_tt = You can also go directly to the wiki page for a window by \
 pressing F1 when it is in focus (try now) 
 btn_metaDataTool = Meta data tool
 btn_metaDataTool_tt = Pick a file and get a list of all meta data found inside
+btn_privacy = Privacy Policy
+btn_privacy_tt = A type of document that you need to write even if no one reads it...
+btn_reportBug = Report a Bug
+btn_reportBug_tt = Report a bug, suggest a new feature and ask questions here
 btn_translationDetails = About this translation
 btn_updateNow = Check for updates now
 check_checkForUpdates = Automatically check for updates
@@ -15,14 +19,21 @@ check_silentUpdates = Update silently
 check_silentUpdates_tt = If checked, new updates will be downloaded without showing \
 any pop-ups or windows. Next time you open the program \
 you will magically have the newest version
-diag_clearStoredData_full = This will delete all presets, the saved YouTube login \
-(not the account), the local playlist filtering and all other settings! \
-\nAll your videos, playlists etc. on YouTube will NOT be affacted.\
-\n\nAre you realy, realy sure you want to do this?
-diag_clearStoredData_short = Clear data - WARNING!
-diag_delAfterExit_full = All settings will be deleted after the program has been closed
+diag_clearStoredData_full = Do you want to disconnect Stekeblads Video Uploader from your \
+YouTube channel and delete all presets, the local playlist \
+filter and other settings?\n\n\
+If you do, the log out request will be sent to YouTube immediately \
+but can take some time before having an effect. Presets etc. will \
+be deleted after you quit the program. Note: If you are not logged \
+in with YouTube then the log out button will work like the cancel button.
+diag_clearStoredData_optDel = Delete
+diag_clearStoredData_optLogOutDel = Log out and delete
+diag_clearStoredData_short = Clear data and log out
+diag_delAfterExit_full = All settings will be deleted after the program has been closed.\
+A request to revoke the program's access to your channel \
+has been sent to YouTube
 diag_delAfterExit_short = Deletion scheduled
-label_langSelect = Langugage settings
+label_langSelect = Language settings
 label_links = Links
 label_resetSettings = Reset application settings
 label_tools = Tools
