--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'io.github.stekeblad'
-version '1.4.0'
+version '1.4.1'
 
 apply plugin: 'idea'
 apply plugin: 'java'
@@ -17,8 +17,8 @@ sourceSets {
                         "**/*.json",
                         "**/*.properties",
                         "**/*.css",
-                        "src/main/java/META-INF/*",
-                        "**/*.pub"
+                        "**/*.pub",
+                        "**/META-INF/**"
             ]
         }
     }
