- Upgraded from using Java 8 to Java 11 - Updated YouTube API version

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    repositories {
+        maven {
+            url "https://nexus.gluonhq.com/nexus/content/repositories/releases"
+        }
+
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = 'videouploader'
-
-
