Updated YouTube API version and limited updater to not be able to automatically update if the major version number changed

--- a/src/main/resources/strings/baseStrings/baseStrings.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings.properties
@@ -46,3 +46,5 @@ update_available_full = Update available, do you want to download this update? \
 Release notes for all versions and manual downloads can be found \
 on GitHub, links in the settings window.\
 \n\nNew version: 
+update_available_noAuto_full = A new major release is available. Major releases do not \
+support automatic updates, do you want to download it manually?
