--- a/src/main/resources/strings/presetsUploads/presetsUploads.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads.properties
@@ -15,3 +15,4 @@ public - everyone can see it\n\
 private - only you can watch it\n\
 unlisted - the video url is required to find the video
 failed = Upload Failed
+resetToDefault = Reset to default
